WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32324
[Chromium] Incorrectly sends WebFrameClient notifications for a detached frame
https://bugs.webkit.org/show_bug.cgi?id=32324
Summary
[Chromium] Incorrectly sends WebFrameClient notifications for a detached frame
Darin Fisher (:fishd, Google)
Reported
2009-12-09 08:52:17 PST
[Chromium] Incorrectly sends WebFrameClient notifications for a detached frame This bug manifests itself as a failure to pass http/tests/loading/gmail-assert-on-load.html The fix is to suppress WebFrameClient callbacks when FrameLoaderClient::detachedFromParent3 is called.
Attachments
v1 patch
(4.72 KB, patch)
2009-12-09 08:58 PST
,
Darin Fisher (:fishd, Google)
eric
: review+
eric
: commit-queue-
Details
Formatted Diff
Diff
v2 patch
(5.94 KB, patch)
2009-12-09 13:33 PST
,
Darin Fisher (:fishd, Google)
eric
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Darin Fisher (:fishd, Google)
Comment 1
2009-12-09 08:58:33 PST
Created
attachment 44541
[details]
v1 patch
WebKit Review Bot
Comment 2
2009-12-09 10:13:48 PST
style-queue ran check-webkit-style on
attachment 44541
[details]
without any errors.
Eric Seidel (no email)
Comment 3
2009-12-09 13:26:44 PST
Looks sane to me.
Eric Seidel (no email)
Comment 4
2009-12-09 13:27:35 PST
Comment on
attachment 44541
[details]
v1 patch This is missing a ChangeLog describing what tests this fixes. Otherwise it looks fine though (assuming this is covered by a test). If it's not changing a test, then that's bad, and I would r- this.
Darin Fisher (:fishd, Google)
Comment 5
2009-12-09 13:30:55 PST
oops, not sure why my changelog entry didn't make it into the patch. let me upload again.
Darin Fisher (:fishd, Google)
Comment 6
2009-12-09 13:33:04 PST
Created
attachment 44559
[details]
v2 patch With ChangeLog entry this time.
Eric Seidel (no email)
Comment 7
2009-12-09 13:34:28 PST
Comment on
attachment 44559
[details]
v2 patch LGTM.
Darin Fisher (:fishd, Google)
Comment 8
2009-12-09 13:37:19 PST
Landed as
http://trac.webkit.org/changeset/51917
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug